fix debian config path

--- a/rsyslog/map.jinja
+++ b/rsyslog/map.jinja
@@ -4,7 +4,7 @@ Debian:
   - rsyslog
   service:
   - rsyslogd
-  configfile: /etc/rsyslog/rsyslog.conf
+  configfile: /etc/rsyslog.conf
 RedHat:
   pkgs:
   - rsyslog
