--- a/rsyslog/map.jinja
+++ b/rsyslog/map.jinja
@@ -4,6 +4,7 @@ Debian:
   - rsyslog
   service:
   - rsyslogd
+  workdirectory: /var/spool/rsyslog
   output:
     file:
       /var/log/syslog:
@@ -39,6 +40,7 @@ Debian:
         umask: "0022"
         enable: true
       /var/log/mail.err:
+        sync: false
         action: /var/log/mail.err
         filter: mail.err
         owner: syslog
@@ -55,23 +57,62 @@ Debian:
         action: "|/dev/xconsole"
         filter: "daemon.*;mail.*; news.err; *.=debug;*.=info;*.=notice;*.=warn"
         enable: true
+    remote:
+      somehost.domain:
+        action: "@@remote-host:514"
+        filter: "*.*"
+        enable: false
 RedHat:
   pkgs:
   - rsyslog
   service:
   - rsyslogd
-  file:
-    owner: root
-    group: root
-    createmode: "0640"
-    umask: "0000"
-  logfiles:
-  - /var/log/messages
-  - /var/log/secure
-  - /var/log/maillog
-  - /var/log/cron
-  - /var/log/spooler
-  - /var/log/boot.log
+  workdirectory: /var/lib/rsyslog
+  output:
+    file:
+      /var/log/messages:
+        sync: true
+        filter: "*.info;mail.none;authpriv.none;cron.none"
+        owner: root
+        group: root
+        createmode: "0600"
+        umask: "0000"
+        enable: true
+      /var/log/secure:
+        sync: true
+        filter: "authpriv.*"
+        owner: root
+        group: root
+        createmode: "0600"
+        enable: true
+      /var/log/maillog:
+        sync: true
+        filter: "mail.*"
+        owner: root
+        group: root
+        createmode: "0600"
+        enable: true
+      /var/log/cron:
+        sync: true
+        filter: "cron.*"
+        owner: root
+        group: root
+        createmode: "0600"
+        enable: true
+      /var/log/spooler:
+        sync: true
+        filter: "uucp,news.crit"
+        owner: root
+        group: root
+        createmode: "0600"
+        enable: true
+      /var/log/boot.log:
+        sync: false
+        filter: "local7.*"
+        owner: root
+        group: root
+        createmode: "0600
+        enable: true
 {%- endload %}
 {%- set server = salt['grains.filter_by'](base_defaults, merge=salt['pillar.get']('rsyslog:server')) %}
 {%- set client = salt['grains.filter_by'](base_defaults, merge=salt['pillar.get']('rsyslog:client')) %}
