--- a/rsyslog/map.jinja
+++ b/rsyslog/map.jinja
@@ -111,7 +111,7 @@ RedHat:
         filter: "local7.*"
         owner: root
         group: root
-        createmode: "0600
+        createmode: "0600"
         enable: true
 {%- endload %}
 {%- set server = salt['grains.filter_by'](base_defaults, merge=salt['pillar.get']('rsyslog:server')) %}
