--- a/rsyslog/map.jinja
+++ b/rsyslog/map.jinja
@@ -138,3 +138,4 @@ RedHat:
 {%- endload %}
 {%- set server = salt['grains.filter_by'](base_defaults, merge=salt['pillar.get']('rsyslog:server')) %}
 {%- set client = salt['grains.filter_by'](base_defaults, merge=salt['pillar.get']('rsyslog:client')) %}
+{%- set common = salt['grains.filter_by'](base_defaults, merge=salt['pillar.get']('rsyslog:client')) %}
