--- a/rsyslog/map.jinja
+++ b/rsyslog/map.jinja
@@ -136,6 +136,4 @@ RedHat:
         createmode: "0600"
         enable: true
 {%- endload %}
-{%- set server = salt['grains.filter_by'](base_defaults, merge=salt['pillar.get']('rsyslog:server')) %}
-{%- set client = salt['grains.filter_by'](base_defaults, merge=salt['pillar.get']('rsyslog:client')) %}
-{%- set common = salt['grains.filter_by'](base_defaults, merge=salt['pillar.get']('rsyslog:client')) %}
+{%- set common = salt['grains.filter_by'](base_defaults, merge=salt['pillar.get']('rsyslog:common')) %}
