--- a/rsyslog/map.jinja
+++ b/rsyslog/map.jinja
@@ -69,10 +69,7 @@ Debian:
         enable: true
       xconsole:
         action: "|/dev/xconsole"
-        filter: "daemon.*;mail.*;\
-          news.err;\
-          *.=debug;*.=info;\
-          *.=notice;*.=warn"
+        filter: "daemon.*;mail.*;news.err;*.=debug;*.=info;*.=notice;*.=warn"
         enable: true
     remote:
       somehost.domain:
