--- a/rsyslog/map.jinja
+++ b/rsyslog/map.jinja
@@ -7,7 +7,7 @@ Debian:
   enabled: true
   spool_dir: /var/spool/rsyslog
   omit_local_logging: false
-  preserve_fqdn: true
+  preserve_fqdn: false
   non_kernel_facility: true
   msg_reduction: true
   purge_rsyslog_d: true
