--- a/rsyslog/map.jinja
+++ b/rsyslog/map.jinja
@@ -88,6 +88,7 @@ RedHat:
   non_kernel_facility: false
   msg_reduction: false
   manage_file_perms: true
+  perm_dir: "0755"
   rsyslog_d: /etc/rsyslog.d
   modules:
   - imjournal
