--- a/rsyslog/map.jinja
+++ b/rsyslog/map.jinja
@@ -89,6 +89,8 @@ RedHat:
   msg_reduction: false
   manage_file_perms: true
   perm_dir: "0755"
+  run_user: root
+  run_group: root
   rsyslog_d: /etc/rsyslog.d
   modules:
   - imjournal
