--- a/rsyslog/map.jinja
+++ b/rsyslog/map.jinja
@@ -19,6 +19,9 @@ Debian:
   modules:
   - imuxsock
   - imklog
+  format:
+    name: Rfc3164Log
+    template: '<%PRI%>%TIMESTAMP:::date-rfc3339% %HOSTNAME% %syslogtag:1:32%%msg:::sp-if-no-1st-sp%%msg%\n'
   output:
     file:
       /var/log/syslog:
@@ -95,6 +98,9 @@ RedHat:
   modules:
   - imjournal
   - imuxsock
+  format:
+    name: Rfc3164Log
+    template: '<%PRI%>%TIMESTAMP:::date-rfc3339% %HOSTNAME% %syslogtag:1:32%%msg:::sp-if-no-1st-sp%%msg%\n'
   output:
     file:
       /var/log/messages:
