Disable xconsole output by default

--- a/rsyslog/map.jinja
+++ b/rsyslog/map.jinja
@@ -73,7 +73,7 @@ Debian:
       xconsole:
         action: "|/dev/xconsole"
         filter: "daemon.*;mail.*;news.err;*.=debug;*.=info;*.=notice;*.=warn"
-        enabled: true
+        enabled: false
     remote:
       somehost.domain:
         action: "@@remote-host:514"
