--- a/rsyslog/map.jinja
+++ b/rsyslog/map.jinja
@@ -153,3 +153,9 @@ RedHat:
 {%- endload %}
 {%- set global = salt['grains.filter_by'](base_defaults, merge=salt['pillar.get']('rsyslog:client')) %}
 {%- set server = salt['pillar.get']('rsyslog:server', {}) %}
+
+{%- set monitoring = salt['grains.filter_by']({
+  'default': {
+    'failed_auths_per_sec': 0.2,
+  },
+}, grain='os_family', merge=salt['pillar.get']('rsyslog:monitoring')) %}
