Add alert for out of memory errors
Change-Id: Id0440ccc3c3c167c870fccec3b2f36cdddf5904c
Depends-On: I3bf4e4e25e2a4aa84f12454fc3f5456e6bafc9a6

--- a/rsyslog/map.jinja
+++ b/rsyslog/map.jinja
@@ -157,5 +157,6 @@ RedHat:
 {%- set monitoring = salt['grains.filter_by']({
   'default': {
     'failed_auths_per_sec': 0.2,
+    'out_of_memory_errors_per_sec': 0.0011,
   },
 }, grain='os_family', merge=salt['pillar.get']('rsyslog:monitoring')) %}
